--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -38,7 +38,10 @@
         "pdf-parse": "^1.1.1",
         "weaviate-ts-client": "^1.1.0",
         "ws": "^8.9.0",
-        "html-to-text": "^9.0.5"
+        "html-to-text": "^9.0.5",
+        "@tensorflow-models/universal-sentence-encoder": "^1.3.3",
+        "@tensorflow/tfjs-converter": "^4.6.0",
+        "@tensorflow/tfjs-node": "^4.6.0"
     },
     "devDependencies": {
         "@types/gulp": "4.0.9",
